[gd_scene load_steps=40 format=3 uid="uid://bx2jyrehfevui"]

[ext_resource type="Script" uid="uid://btpmrn75pj6qu" path="res://scenes/player/player.gd" id="1_nmkp4"]
[ext_resource type="Texture2D" uid="uid://drv84wxu5yyvy" path="res://images/shadow.png" id="3_ojwb4"]
[ext_resource type="Texture2D" uid="uid://b2cuhdnnhn6dr" path="res://images/player/idle_1.png" id="4_588h0"]
[ext_resource type="Texture2D" uid="uid://cpe0fkpomu8hf" path="res://images/player/weapon_idle_1.png" id="4_vrc5h"]
[ext_resource type="Texture2D" uid="uid://ywpmasbgiulv" path="res://images/player/idle_2.png" id="5_05cjg"]
[ext_resource type="Texture2D" uid="uid://bps6sleyuegis" path="res://images/player/weapon_idle_2.png" id="5_m5mau"]
[ext_resource type="Texture2D" uid="uid://bbe2miexqgqcc" path="res://images/player/run_1.png" id="6_6827n"]
[ext_resource type="AudioStream" uid="uid://bxqlb00owt0yo" path="res://sounds/footsteps/footstep_1.wav" id="6_eqrjj"]
[ext_resource type="Texture2D" uid="uid://bcwuq2wq0w2tg" path="res://images/player/weapon_run_1.png" id="6_v5wh0"]
[ext_resource type="AudioStream" uid="uid://bpqvm4mylltqy" path="res://sounds/footsteps/footstep_2.wav" id="7_kl3de"]
[ext_resource type="Texture2D" uid="uid://dv3631wqdkqma" path="res://images/player/run_2.png" id="7_lwkv4"]
[ext_resource type="Texture2D" uid="uid://5xnn3s6nc6oe" path="res://images/player/weapon_run_2.png" id="7_uonmf"]
[ext_resource type="Texture2D" uid="uid://ch5axhisdpt4q" path="res://images/particles/footsteps.png" id="8_1mk4q"]
[ext_resource type="Texture2D" uid="uid://ddjd0226qvii4" path="res://images/weapons/slipper.png" id="10_u4dt6"]
[ext_resource type="AnimationLibrary" uid="uid://cr3eryama6a7r" path="res://character_anims.res" id="13_8ydkj"]
[ext_resource type="Texture2D" uid="uid://8l2jjqfjsnxg" path="res://images/enemies/death.png" id="14_3j4b4"]
[ext_resource type="AudioStream" uid="uid://cignnr3g3u44l" path="res://sounds/hurt.wav" id="15_ehvbm"]
[ext_resource type="PackedScene" uid="uid://blgmfgum1gf63" path="res://scenes/ui/health_bar.tscn" id="16_e2n8c"]
[ext_resource type="Texture2D" uid="uid://ltijg4c3s7e3" path="res://images/ui/health_below_friendly.png" id="17_u3imn"]
[ext_resource type="Texture2D" uid="uid://dieu35wosrnlr" path="res://images/ui/health_above_friendly.png" id="18_cw01s"]
[ext_resource type="Texture2D" uid="uid://bsbhnvushm1wa" path="res://images/particles/hit.png" id="19_lgqa7"]

[sub_resource type="Curve" id="Curve_behe2"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_3j4b4"]
curve = SubResource("Curve_behe2")

[sub_resource type="Gradient" id="Gradient_epd02"]
interpolation_mode = 2
colors = PackedColorArray(0.43134, 0.43134, 0.43134, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_yj68g"]
gradient = SubResource("Gradient_epd02")

[sub_resource type="Curve" id="Curve_xfiav"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.626667, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_ioxgp"]
curve = SubResource("Curve_xfiav")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uhvml"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(20, 1, 1)
angular_velocity_min = -100.0
angular_velocity_max = 100.0
radial_velocity_min = -40.0
radial_velocity_max = 40.0
gravity = Vector3(0, 98, 0)
scale_min = 0.5
scale_max = 1.5
scale_curve = SubResource("CurveTexture_ioxgp")
color_ramp = SubResource("GradientTexture1D_yj68g")
anim_speed_curve = SubResource("CurveTexture_3j4b4")

[sub_resource type="SpriteFrames" id="SpriteFrames_ls5t0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_588h0")
}, {
"duration": 1.0,
"texture": ExtResource("5_05cjg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_6827n")
}, {
"duration": 1.0,
"texture": ExtResource("7_lwkv4")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_vrc5h")
}, {
"duration": 1.0,
"texture": ExtResource("5_m5mau")
}],
"loop": true,
"name": &"weapon_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_v5wh0")
}, {
"duration": 1.0,
"texture": ExtResource("7_uonmf")
}],
"loop": true,
"name": &"weapon_run",
"speed": 5.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_dk0tv"]
random_pitch = 2.0
random_volume_offset_db = 1.4
streams_count = 2
stream_0/stream = ExtResource("6_eqrjj")
stream_1/stream = ExtResource("7_kl3de")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_msway"]
radius = 19.0
height = 70.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cv2ot"]
radius = 20.025

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ar2di"]
radius = 12.0
height = 48.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_y4x4r"]
random_pitch = 1.4
streams_count = 1
stream_0/stream = ExtResource("15_ehvbm")

[sub_resource type="Gradient" id="Gradient_8ydkj"]
colors = PackedColorArray(0.800491, 0.800491, 0.800491, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vf1xh"]
gradient = SubResource("Gradient_8ydkj")

[sub_resource type="Curve" id="Curve_3j4b4"]
_limits = [0.0, 4.0, 0.0, 1.0]
_data = [Vector2(0, 1.14286), 0.0, 1.4, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ncwk0"]
curve = SubResource("Curve_3j4b4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yj68g"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 200.0
initial_velocity_max = 250.0
gravity = Vector3(0, 400, 0)
radial_accel_min = -40.0
radial_accel_max = 40.0
scale_curve = SubResource("CurveTexture_ncwk0")
color_initial_ramp = SubResource("GradientTexture1D_vf1xh")

[node name="Player" type="CharacterBody2D" groups=["player"]]
modulate = Color(0.7, 0.7, 0.7, 1)
light_mask = 0
collision_layer = 36
collision_mask = 16
motion_mode = 1
script = ExtResource("1_nmkp4")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.246)
position = Vector2(3, 2)
texture = ExtResource("3_ojwb4")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 16
texture = ExtResource("8_1mk4q")
lifetime = 0.4
one_shot = true
explosiveness = 0.6
process_material = SubResource("ParticleProcessMaterial_uhvml")

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
emitting = false
amount = 16
texture = ExtResource("8_1mk4q")
lifetime = 0.4
one_shot = true
explosiveness = 0.6
process_material = SubResource("ParticleProcessMaterial_uhvml")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -29)
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_ls5t0")
animation = &"idle"
speed_scale = 0.4

[node name="Weapon" type="Sprite2D" parent="AnimatedSprite2D"]
visible = false
position = Vector2(-60.6723, -24.9524)
rotation = 2.93215
scale = Vector2(1, -1)
texture = ExtResource("10_u4dt6")
offset = Vector2(0.97168, 10.5897)

[node name="RunAnim" type="AnimationPlayer" parent="AnimatedSprite2D"]
unique_name_in_owner = true
libraries = {
&"": ExtResource("13_8ydkj")
}
autoplay = "idle"
speed_scale = 2.0

[node name="Death" type="Sprite2D" parent="AnimatedSprite2D"]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("14_3j4b4")

[node name="FootstepSFX" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_dk0tv")
volume_db = 5.0

[node name="XCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="YCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(2, -33)
shape = SubResource("CapsuleShape2D_msway")

[node name="AntiClump" type="CharacterBody2D" parent="."]
position = Vector2(2, -1)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AntiClump"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_cv2ot")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ar2di")

[node name="HurtSFX" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_y4x4r")

[node name="HealthBar" parent="." instance=ExtResource("16_e2n8c")]
offset_left = 26.0
offset_top = -75.0
offset_right = 58.0
offset_bottom = -43.0
texture_under = ExtResource("17_u3imn")
texture_progress = ExtResource("18_cw01s")

[node name="HurtParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, -24)
emitting = false
amount = 15
texture = ExtResource("19_lgqa7")
lifetime = 0.4
one_shot = true
explosiveness = 0.6
process_material = SubResource("ParticleProcessMaterial_yj68g")

[connection signal="damaged" from="." to="HurtSFX" method="play" unbinds=2]
[connection signal="damaged" from="." to="HurtParticles" method="restart" unbinds=2]
[connection signal="death" from="." to="." method="_on_death"]
[connection signal="current_animation_changed" from="AnimatedSprite2D/RunAnim" to="." method="_on_run_anim_current_animation_changed"]
